@startuml Диаграмма базы данных

entity Item {
  * id : INT
  --
  seller_id: INT
  name : TEXT
  price : NUMERIC
}

entity Order {
  * id : INT
  --
  seller_id : TEXT
  admin_id : TEXT
}

entity Seller {
  * id : TEXT
  --
  ur_face : INT
  location : TEXT
}

entity Admin {
  * id : TEXT
  --
  ur_face: INT
  location : TEXT
}

entity Order_Item {
  * id: INT
  --
  item_id: INT
  order_id: INT
  amount: INT
}

Item --* Seller

Order --* Seller
Order --* Admin

Order_Item --* Item
Order_Item --* Order

@enduml
